@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19920909
+MANIFEST for ded, version t19920923
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 Makefile                        top-level makefile for unix directory editor
