@@ -1,3 +1,7 @@
+1992-09-23  dickey@software.org
+
+	* src/ded.c: moved 'dedwait()' call for PAGER inside 'forkfile()'
+
 1992-09-09  dickey@software.org
 
 	* test/test4.cmd:
